@@ -214,3 +214,4 @@ b bugfix
               * hamiltonian/jaynes_cummings:  allow multiple modes as well as multiple atoms.
               + utils/cm_phase
               + utils/R_SO3
+              + utils/wigner3j
